Source/WebKit/chromium/WebKit.gypi
@@ -102,6 +102,7 @@
             'tests/DecimalTest.cpp',
             'tests/DragImageTest.cpp',
             'tests/DrawingBufferChromiumTest.cpp',
+            'tests/EventHandlerTest.cpp',
             'tests/EventListenerTest.cpp',
             'tests/FakeCCLayerTreeHostClient.h',
             'tests/FakeGraphicsContext3DTest.cpp',
